2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  When a module is binary (for now, ".so" extension, but might
	  need to add more), don't try to setup main code and disassemble.

2011-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/warn.py:
	  Implement support for cells which are used to store variables
	  used in nested scope.
	  Instead of blindly reusing the code object to handle nested code,
	  restore the func object afterwards so that the code object points
	  to the outside function at the end.
	  Consider in the future actually making copies or deepcopies of
	  the code object for the nested code, and keep references around.
	  Fixes test_scope.py
	* test/expected/nested:
	* test/test_internal.py:
	* test/test_scope.py:
	* test_expected/test76:
	  Adjust tests and expected output for this fix.

2011-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_pychecker_CodeChecks.py:
	* test/expected/future_divide:
	* test/input/future_divide.py:
	  Add a test for inplace-division with __future__ division.
	* pychecker/CodeChecks.py:
	  Implement INPLACE_FLOOR_DIVIDE and INPLACE_TRUE_DIVIDE.

2011-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_scope.py:
	* test/expected/nested:
	* test/input/nested.py:
	  Add a test where pychecker lets the scope of one nested function
	  bleed into the next one.

2011-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/unused_import.py:
	  Change to an import that exists on older pythons.
	* test/expected/unused_import:
	  Adapt expected output.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/unused_import.py:
	  Add an import and a function argument shadowing that name.
	  This used to fail up to pychecker 0.8.19, but now correctly
	  triggers
	* test/expected/unused_import:
	* test/test_internal.py: